Introduce jlink support